fixed background to stretch proportionally

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-.background {
-  filter: blur(3px);
-  -webkit-filter: blur(3px);
-  width: 100%;
+html {
+  background: url('bg.png') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .overlay {
